@@ -143,8 +143,6 @@
 \alias{ttkscrollbar}
 \alias{tkfocus}
 
-\alias{data}
-
 \title{Rcmdr Utility Functions}
 \description{
   These functions support writing additions to the Rcmdr package, preferably by writing
@@ -183,8 +181,6 @@ closeCommander(ask=TRUE, ask.save=ask)
 closeDialog(window, release=TRUE)  # macro
 Coef(object, ...)
 CommanderWindow()
-data(..., list = character(), package = NULL, lib.loc = NULL, 
-    verbose = getOption("verbose"), envir = .GlobalEnv)
 dataSetsP(n=1)
 defmacro(..., expr)
 dialogSuffix(window=top, onOK=onOK, onCancel=onCancel, rows, columns, 
@@ -415,8 +411,6 @@ commanderPosition()
   \item{keep}{if \code{TRUE}, keep (rather than pop) last output or command in the stack; the default is \code{FALSE}.}
   \item{label}{label prefix for groups button after a selection is made.}
   \item{labels}{a vector of character strings to label a set of radio buttons or check boxes.}
-  \item{lib.loc}{see documentation for \code{\link[utils]{data}}.}
-  \item{list}{see documentation for \code{\link[utils]{data}}.}
   \item{listHeight}{Maximum number of elements displayed simultaneously in list box.}
   \item{loaded}{if \code{TRUE}, plug-in packages that are loaded are included in the vector of names
     returned.}
@@ -435,7 +429,7 @@ commanderPosition()
     that saves the editor buffer to the appropriate \emph{Tcl} variable.}
   \item{onOK}{function to execute when the \emph{OK} button is pressed.}
   \item{onCancel}{function to execute when the \emph{Cancel} button or \emph{Esc} key is pressed.}
-  \item{package}{quoted name of package to load; also see documentation for \code{\link[utils]{data}}.}
+  \item{package}{quoted name of package to load.}
   \item{parent}{parent Tk window.}
   \item{plotLinesByGroup}{include a check box for plotting lines by group?}
   \item{plotLinesByGroupsText}{the label for the plot-lines-by-group check box.}
@@ -493,7 +487,6 @@ commanderPosition()
   \item{variableList}{a vector of variable names.}
   \item{variables}{a vector of one or more variable names.}
   \item{vars}{a vector of one or more variable names; if given \code{type} argument is ignored.}
-  \item{verbose}{see documentation for \code{\link[utils]{data}}.}
   \item{what}{optional character vector of one or more dialog names for which the memory is to be flushed; if not 
     specified, all dialog memory will be flushed.}
   \item{window, parentWindow}{a Tk window.}
@@ -502,8 +495,6 @@ commanderPosition()
   \item{\dots}{For \code{gettextRcmdr}, text string or vector of text strings to translate; 
     for \code{titleLabel}, arguments to be passed to \code{labelRcmdr} and from there to \code{ttklabel};
     for \code{defmacro}, arguments for the macro; 
-    for \code{data} (which is re-exported from the \pkg{utils} package for technical reasons) 
-      see the documentation for \code{\link[utils]{data}}; 
     otherwise you should disregard this argument.}
 }
 
@@ -643,7 +634,6 @@ commanderPosition()
   
   The \code{tkfocus} function is exported for historical reasons.
   
-  The \code{\link[utils]{data}} function, imported from the \pkg{utils} package, is exported for technical reasons.
 }
 
 \references{
